--- a/front-end/index.html
+++ b/front-end/index.html
@@ -4,7 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Financial App</title>
-    <meta name="description" content="O seu aplicativo de finanças pessoais. Cria sua conta gratuita ou use localmente">
+    <meta name="description" content="O seu aplicativo de finanças pessoais. Cria sua conta gratuita ou use localmente." />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Spectral:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet" />
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        text-decoration: none;
+      }
+      body {
+        font-family: 'Spectral', serif;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
