--- a/front-end/index.html
+++ b/front-end/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Financial App</title>
-    <meta name="description" content="O seu aplicativo de finanças pessoais. Cria sua conta gratuita ou use localmente." />
+    <meta name="description" content="O seu aplicativo de finanças pessoais. Crie uma conta gratuitamente e assuma o controle do seu dinheiro!" />
     <link rel="shortcut icon" href="https://www.seekpng.com/png/full/118-1180200_donate-today-blue-money-icon-png.png" type="image/png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
